permutacion broskis seed en los bytes del header 6 y 7